# qt-todo-demo

./: CMakeLists.txt  README.md
src/: main.cpp
src/backend/: CMakeLists.txt  imageprocessor.cpp  imageprocessor.h  opencvprocessor.cpp  opencvprocessor.h  todolist.cpp  todolist.h
src/frontend/: CMakeLists.txt  ImageProcessingTab.qml  OpenCVTab.qml  main.qml
